# implement_MLP_with_Eigen

./: .clang-format  CMakeLists.txt  README.md  inference.cpp  inference.py  layer_model0.txt  load_model.h  main.cpp  model0.csv  model1.csv  model2.csv  model_print.py  settingsdrm19_0.json  settingsdrm19_1.json  settingsdrm19_2.json
H2/: layer.txt  model.csv
